--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
