--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -22,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.1.0",
+    "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
