--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "npm run dev --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Brad Traversy",
+  "author": "jose",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
@@ -20,10 +20,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.17.3",
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.1.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
